added authentication & authorization

--- a/SuggestionAppUI/_Imports.razor
+++ b/SuggestionAppUI/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using SuggestionAppUI
 @using SuggestionAppUI.Shared
+@using SuggestionAppUI.Pages
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage;
