--- a/SuggestionAppUI/Pages/Index.razor
+++ b/SuggestionAppUI/Pages/Index.razor
@@ -43,8 +43,8 @@
                             @s.Category?.CategoryName
                         </div>
                     </div>
-                    <div>
-                        <div>
+                    <div class="suggestion-entry-status @GetSuggestionStatusClass(s)">
+                        <div class="suggestion-entry-status-text">
                             @s.SuggestionStatus?.StatusName
                         </div>
                     </div>
@@ -52,26 +52,26 @@
             </Virtualize>
         }
     </div>
-    <div>
+    <div class="col-md-4 col-xl-3">
         @if (categories != null)
         {
-            <div>
-                <span>Category</span>
-                <div @onclick="(() => OnCategoryClick())">All</div>
+            <div class="categories">
+                <span class="text-uppercase fw-bold">Category</span>
+                <div class="@GetSelectedCategory()" @onclick="(() => OnCategoryClick())">All</div>
                 @foreach (var c in categories)
                 {
-                    <div @onclick="(() => OnCategoryClick(c.CategoryName))">@c.CategoryName</div>
+                    <div class="@GetSelectedCategory(c.CategoryName)" @onclick="(() => OnCategoryClick(c.CategoryName))">@c.CategoryName</div>
                 }
             </div>
         }
         @if (statuses != null)
         {
-            <div>
-                <span>Status</span>
-                <div @onclick="(() => OnStatusClick())">All</div>
+            <div class="statuses">
+                <span class="text-uppercase fw-bold">Status</span>
+                <div class="@GetSelectedStatus()" @onclick="(() => OnStatusClick())">All</div>
                 @foreach (var s in statuses)
                 {
-                    <div @onclick="(() => OnStatusClick(s.StatusName))">@s.StatusName</div>
+                    <div class="@GetSelectedStatus(s.StatusName)" @onclick="(() => OnStatusClick(s.StatusName))">@s.StatusName</div>
                 }
             </div>
         }
@@ -372,6 +372,52 @@
         else
         {
             return "suggestion-entry-not-voted";
+        }
+    }
+
+    // return css class
+    private string GetSuggestionStatusClass(SuggestionModel suggestion)
+    {
+        if (suggestion == null | suggestion.SuggestionStatus == null)
+        {
+            return "suggstion-entry-status-none";
+        }
+
+        string output = suggestion.SuggestionStatus.StatusName switch
+        {
+            "Completed" => "suggstion-entry-status-completed",
+            "Watching" => "suggstion-entry-status-watching",
+            "Upcoming" => "suggstion-entry-status-upcoming",
+            "Dismissed" => "suggstion-entry-status-dismissed",
+            _ => "suggstion-entry-status-completed",
+        };
+
+        return output;
+    }
+
+    // return css class
+    private string GetSelectedCategory(string category = "All")
+    {
+        if (category == selectedCategory)
+        {
+            return "selected-category";
+        }
+        else
+        {
+            return "";
+        }
+    }
+
+    // return css class
+    private string GetSelectedStatus(string status = "All")
+    {
+        if (status == selectedStatus)
+        {
+            return "selected-status";
+        }
+        else
+        {
+            return "";
         }
     }
 }
