--- a/SuggestionAppUI/wwwroot/css/site.css
+++ b/SuggestionAppUI/wwwroot/css/site.css
@@ -28,8 +28,14 @@ h1:focus {
 }
 
 a, .btn-link {
-    color: #0071c1;
+    color: #FFFFFF;
+    text-decoration: none;
 }
+
+    a:hover, .btn-link:hover {
+        color: #FFFFFF;
+        text-decoration: underline;
+    }
 
 .btn-primary {
     color: #fff;
@@ -285,3 +291,91 @@ a, .btn-link {
     font-size: 0.8rem;
     letter-spacing: 1.2px;
 }
+
+.nav-links {
+    display: flex;
+    text-align: center;
+    justify-content: flex-end;
+}
+
+.login-link {
+    padding-left: 1rem;
+}
+
+.form-layout {
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    padding: 2rem;
+}
+
+    form-layout a {
+        font-weight: 700;
+        color: darkgreen;
+    }
+
+        form-layout a:hover {
+            font-weight: 700;
+            color: darkgreen;
+            text-decoration: underline;
+        }
+
+.close-button-section {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.input-section {
+    margin-bottom: 2rem;
+
+}
+
+.input-description {
+    margin-bottom: 0.5rem;
+}
+
+.radio-item-group input[type="radio"] {
+    display: none;
+}
+
+.radio-item-group label {
+    border-color: darkgreen;
+    border-width: 1px;
+    padding: 0.3rem 1.5rem;
+    border-radius: 10px;
+    width: 100%;
+    border-style: solid;
+}
+
+.radio-item-group input[type="radio"]:checked + label {
+    background-color: darkgreen;
+    color: #FFFFFF;
+    width: 100%;
+    border: 1px darkgreen solid;
+}
+
+.radio-item-group {
+    margin: 0.5rem;
+}
+
+.center-children {
+    display: flex;
+    justify-content: center;
+}
+
+.btn-main {
+    color: #FFFFFF;
+    background-color: darkgreen;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    border-radius: 10px;
+    border-width: 3px;
+}
+
+    .btn-main:hover {
+        color: darkgreen;
+        border-color: darkgreen;
+        background-color: #FFFFFF;
+        border-width: 3px;
+    }
