--- a/SuggestionAppUI/Pages/AdminApproval.razor
+++ b/SuggestionAppUI/Pages/AdminApproval.razor
@@ -6,9 +6,9 @@
 
 <h1 class="page-heading text-uppercase mb-4">Pendig Submissions</h1>
 <div class="row">
-    <div class="suggestions-count col-8 mt-2">@submissions?.Count Submission(s)</div>
+    <div class="suggestions-count col-8 mt-2 color-white">@submissions?.Count Submission(s)</div>
     <div class="col-4 close-button-section">
-        <button class="btn btn-close" @onclick="ClosePage"></button>
+        <img class="svg-close" src="./images/Icon.svg" @onclick="ClosePage" />
     </div>
 </div>
 
