--- a/SuggestionAppUI/Pages/Profile.razor
+++ b/SuggestionAppUI/Pages/Profile.razor
@@ -5,51 +5,51 @@
 @inject AuthenticationStateProvider authProvider
 @inject NavigationManager navManager
 
-<h1>My Profile</h1>
+<h1 class="page-heading text-upeprcase mb-4">My Profile</h1>
 
-<div>
-    <div>
-        <button @onclick="ClosePage"></button>
+<div class="row">
+    <div class="col-12 close-button-section mb-1">
+        <img class="svg-close" src="./images/Icon.svg" @onclick="ClosePage" />
     </div>
 </div>
 
-<div>
-    <h2>My Account</h2>
-    <p>
-        <a href="MicrosoftIdentity/Account/EditProfile">Edit My Profile</a>
+<div class="form-layout mb-3">
+    <h2 class="my-submission-heading">My Account</h2>
+    <p class="my-submission-text">
+        <a class="color-darkgreen" href="MicrosoftIdentity/Account/EditProfile">Edit My Profile</a>
     </p>
 </div>
 
 @if (approved?.Count > 0)
 {
-    <div>
-        <h2>Approved Suggestions</h2>
-        <p>These are your active suggestions.</p>
+    <div class="form-layout mb-3">
+        <h2 class="my-submission-heading">Approved Suggestions</h2>
+        <p class="my-submission-text">These are your active suggestions.</p>
 
         @foreach (var s in approved)
         {
-            <hr />
-            <div>
+            <hr class="my-submission-seperator" />
+            <div class="fw-bold suggestion-detail-suggestion">
                 @s.Suggestion
             </div>
-            <p>
+            <p class="my-submission-text">
                 @s.DateCreated.ToString("dd.MM.yyyy")
             </p>
-            <p>
+            <p class="my-submission-text">
                 Total Votes: @s.UserVotes.Count
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Category.CategoryName
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Description
             </p>
             @if (s.SuggestionStatus != null)
             {
-                <div>
+                <div class="fw-bold suggestion-detail-suggestion">
                     @s.SuggestionStatus.StatusName
                 </div>
-                <p>
+                <p class="my-submission-text">
                     @((MarkupString)s.OwnerNotes)
                 </p>
             }
@@ -59,34 +59,34 @@
 
 @if (archived?.Count > 0)
 {
-    <div>
-        <h2>Archived Suggestions</h2>
-        <p>These are your archived suggestions.</p>
+    <div class="form-layout mb-3">
+        <h2 class="my-submission-heading">>Archived Suggestions</h2>
+        <p class="my-submission-text">These are your archived suggestions.</p>
 
         @foreach (var s in archived)
         {
-            <hr />
-            <div>
+            <hr class="my-submission-seperator" />
+            <div class="fw-bold suggestion-detail-suggestion">
                 @s.Suggestion
             </div>
-            <p>
+            <p class="my-submission-text">
                 @s.DateCreated.ToString("dd.MM.yyyy")
             </p>
-            <p>
+            <p class="my-submission-text">
                 Total Votes: @s.UserVotes.Count
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Category.CategoryName
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Description
             </p>
             @if (s.SuggestionStatus != null)
             {
-                <div>
+                <div class="fw-bold suggestion-detail-suggestion">
                     @s.SuggestionStatus.StatusName
                 </div>
-                <p>
+                <p class="my-submission-text">
                     @((MarkupString)s.OwnerNotes)
                 </p>
             }
@@ -96,34 +96,34 @@
 
 @if (pending?.Count > 0)
 {
-    <div>
-        <h2>Pending Suggestions</h2>
-        <p>These are your pending suggestions.</p>
+    <div class="form-layout mb-3">
+        <h2 class="my-submission-heading">Pending Suggestions</h2>
+        <p class="my-submission-text">These are your pending suggestions.</p>
 
         @foreach (var s in pending)
         {
-            <hr />
-            <div>
+            <hr class="my-submission-seperator" />
+            <div class="fw-bold suggestion-detail-suggestion">
                 @s.Suggestion
             </div>
-            <p>
+            <p class="my-submission-text">
                 @s.DateCreated.ToString("dd.MM.yyyy")
             </p>
-            <p>
+            <p class="my-submission-text">
                 Total Votes: @s.UserVotes.Count
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Category.CategoryName
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Description
             </p>
             @if (s.SuggestionStatus != null)
             {
-                <div>
+                <div class="fw-bold suggestion-detail-suggestion">
                     @s.SuggestionStatus.StatusName
                 </div>
-                <p>
+                <p class="my-submission-text">
                     @((MarkupString)s.OwnerNotes)
                 </p>
             }
@@ -133,34 +133,34 @@
 
 @if (rejected?.Count > 0)
 {
-    <div>
-        <h2>Rejected Suggestions</h2>
-        <p>These are your rejected suggestions.</p>
+    <div class="form-layout mb-3">
+        <h2 class="my-submission-heading">>Rejected Suggestions</h2>
+        <p class="my-submission-text">These are your rejected suggestions.</p>
 
         @foreach (var s in rejected)
         {
-            <hr />
-            <div>
+            <hr class="my-submission-seperator" />
+            <div class="fw-bold suggestion-detail-suggestion">
                 @s.Suggestion
             </div>
-            <p>
+            <p class="my-submission-text">
                 @s.DateCreated.ToString("dd.MM.yyyy")
             </p>
-            <p>
+            <p class="my-submission-text">
                 Total Votes: @s.UserVotes.Count
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Category.CategoryName
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Description
             </p>
             @if (s.SuggestionStatus != null)
             {
-                <div>
+                <div class="fw-bold suggestion-detail-suggestion">
                     @s.SuggestionStatus.StatusName
                 </div>
-                <p>
+                <p class="my-submission-text">
                     @((MarkupString)s.OwnerNotes)
                 </p>
             }
