--- a/SuggestionAppUI/Pages/Details.razor
+++ b/SuggestionAppUI/Pages/Details.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Details/{Id}"
 @inject ISuggestionData suggestionData
 @inject IUserData userData
+@inject IStatusData statusData
 @inject AuthenticationStateProvider authProvider
 @inject NavigationManager navManager
 
@@ -54,6 +55,45 @@
     </div>
 }
 
+@if (suggestion != null)
+{
+    <AuthorizeView Policy="Admin">
+        <div class="row justify-content-center detail-form">
+            <div class="col-xl-8 col-lg-10 form-layout admin-details"> 
+                <div class="suggestion-detail-status fw-bold mb-2 suggestion-detail-suggestion">
+                    Set Status
+                </div>
+                @if (string.IsNullOrWhiteSpace(settingStatus))
+                {
+                    <div class="admin-set-statuses">
+                        <button class="btn suggestion-entry-text-category btn-archive btn-status-completed" @onclick="@(() => settingStatus = "completed")">completed</button>
+                        <button class="btn suggestion-entry-text-category btn-archive btn-status-watching" @onclick="@(() => settingStatus = "watching")">watching</button>
+                        <button class="btn suggestion-entry-text-category btn-archive btn-status-upcoming" @onclick="@(() => settingStatus = "upcoming")">upcoming</button>
+                        <button class="btn suggestion-entry-text-category btn-archive btn-status-dismissed" @onclick="@(() => settingStatus = "dismissed")">dismissed</button>
+                    </div>
+                }
+                else if (settingStatus == "completed")
+                {
+                    <div>
+                        <input @bind="urlText" class="form-control rounded-control" type="text" placeholder="Url" aria-label="Content Url" />
+                    </div>
+                    <div class="suggestion-entry-bottom">
+                        <button class="btn btn-archive btn-archive-confirm" @onclick="CompleteSetStatus">confirm</button>
+                        <button class="btn btn-archive btn-archive-reject" @onclick="(() => settingStatus = null)">cancel</button>
+                    </div>
+                }
+                else
+                {
+                    <div class="suggestion-entry-bottom color-darkgreen">
+                        <button class="btn btn-archive btn-archive-confirm" @onclick="CompleteSetStatus">confirm</button>
+                        <button class="btn btn-archive btn-archive-reject" @onclick="(() => settingStatus = null)">cancel</button>
+                    </div>
+                }
+            </div>
+        </div>
+    </AuthorizeView>
+}
+
 @code {
     // Parameter passed by the url {Id}
     [Parameter]
@@ -62,10 +102,45 @@
     private UserModel loggedInUser;
     private SuggestionModel suggestion;
 
+    private List<StatusModel> statuses;
+    private string settingStatus = "";
+    private string urlText = "";
+
     protected async override Task OnInitializedAsync()
     {
         suggestion = await suggestionData.GetSuggestion(Id);
         loggedInUser = await authProvider.GetUserFromAuth(userData);
+        statuses = await statusData.GetAllStatuses();
+    }
+
+    private async Task CompleteSetStatus()
+    {
+        switch (settingStatus)
+        {
+            case "completed":
+                if (string.IsNullOrWhiteSpace(urlText))
+                {
+                    return;
+                }
+                suggestion.SuggestionStatus = statuses.Where(s => s.StatusName.ToLower() == settingStatus.ToLower()).First();
+                suggestion.OwnerNotes = $"Here is our finished resource about it: <a class='color-darkgreen' href='{urlText}' target='_blank'>{urlText}</a>";
+                break;
+            case "watching":
+                suggestion.SuggestionStatus = statuses.Where(s => s.StatusName.ToLower() == settingStatus.ToLower()).First();
+                suggestion.OwnerNotes = "The topic needs some more traction to be addressed.";
+                break;
+            case "upcoming":
+                suggestion.SuggestionStatus = statuses.Where(s => s.StatusName.ToLower() == settingStatus.ToLower()).First();
+                suggestion.OwnerNotes = "We have a resource in our pipeline.";
+                break;
+            case "dismissed":
+                suggestion.SuggestionStatus = statuses.Where(s => s.StatusName.ToLower() == settingStatus.ToLower()).First();
+                suggestion.OwnerNotes = "Your idea doesn't fit.";
+                break;
+        }
+
+        settingStatus = null;
+        await suggestionData.UpdateSuggestion(suggestion);
     }
 
     private void ClosePage()
