--- a/SuggestionAppUI/wwwroot/css/site.css
+++ b/SuggestionAppUI/wwwroot/css/site.css
@@ -479,12 +479,6 @@ a, .btn-link {
     border-bottom-left-radius: 15px;
 }
 
-.suggstion-detail-status-completed {
-    background-color: #FFFFFF;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-}
-
 .suggestion-detail-status-section {
     padding: 1.5rem;
 }
@@ -626,4 +620,30 @@ a, .btn-link {
 
 .btn-archive-confirm {
     color: #E9354C;
+}
+
+.admin-details {
+    margin-top: 20px;
+}
+
+.admin-set-statuses {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.btn-status-completed:hover {
+    color: #B5D34A;
+}
+
+.btn-status-watching:hover {
+    color: #E9354C;
+}
+
+.btn-status-upcoming:hover {
+    color: #835581;
+}
+
+.btn-status-dismissed:hover {
+    color: #F9C30B;
 }
