--- a/SuggestionAppUI/Pages/Index.razor
+++ b/SuggestionAppUI/Pages/Index.razor
@@ -21,6 +21,25 @@
     <div class="col-md-4 col-xl-3 search-box">
         <input class="form-control rounded-control" type="text" placeholder="Search" aria-label="Search box" @oninput="((txt) => OnSearchInput((string)txt.Value))"/>
     </div>
+    <div class="col-12 d-block d-md-none">
+        @if (categories != null && showCategories)
+        {
+            <div class="categories">
+                <span class="text-uppercase fw-bold">Category</span>
+                <div class="@GetSelectedCategory()" @onclick="(() => OnCategoryClick())">All</div>
+                @foreach (var c in categories)
+                {
+                    <div class="@GetSelectedCategory(c.CategoryName)" @onclick="(() => OnCategoryClick(c.CategoryName))">@c.CategoryName</div>
+                }
+            </div>
+        }
+        else
+        {
+            <div class="categories" @onclick="(() => showCategories = true)">
+                <span class="selected-category">@selectedCategory</span>
+            </div>
+        }
+    </div>
 </div>
 
 <div class="row">
@@ -67,7 +86,7 @@
             </Virtualize>
         }
     </div>
-    <div class="col-md-4 col-xl-3">
+    <div class="col-md-4 col-xl-3 d-none d-md-block ">
         @if (categories != null)
         {
             <div class="categories">
@@ -104,6 +123,9 @@
     private string selectedStatus = "All";
     private string searchText = "";
     private bool isSortedByNew = true;
+    private bool showCategories = false;
+    private bool showStatuses = false;
+
 
     // page gets renderd twice -> methode gets called twice
     // 1. prerendered on the server Pages\_Host.cshtml -> <component type="typeof(App)" render-mode="ServerPrerendered" />
@@ -281,6 +303,7 @@
     private async Task OnCategoryClick(string category = "All")
     {
         selectedCategory = category;
+        showCategories = false;
         await FilterSuggestions();
     }
 
@@ -288,6 +311,7 @@
     private async Task OnStatusClick(string status = "All")
     {
         selectedStatus = status;
+        showStatuses = false;
         await FilterSuggestions();
     }
 
