--- a/SuggestionAppUI/Pages/Index.razor
+++ b/SuggestionAppUI/Pages/Index.razor
@@ -39,6 +39,24 @@
                 <span class="selected-category">@selectedCategory</span>
             </div>
         }
+
+        @if (statuses != null && showStatuses)
+        {
+            <div class="statuses">
+                <span class="text-uppercase fw-bold">Statuses</span>
+                <div class="@GetSelectedStatus()" @onclick="(() => OnStatusClick())">All</div>
+                @foreach (var s in statuses)
+                {
+                    <div class="@GetSelectedStatus(s.StatusName)" @onclick="(() => OnStatusClick(s.StatusName))">@s.StatusName</div>
+                }
+            </div>
+        }
+        else
+        {
+            <div class="statuses" @onclick="(() => showStatuses = true)">
+                <span class="selected-status">@selectedStatus</span>
+            </div>
+        }
     </div>
 </div>
 
